# agent-loop-kit

./: AGENT.md  README.md  pyproject.toml
.agent/: backlog.md  context.md  mission.md
.agent/feedback/: README.md
.agent/research/: README.md
.agent/reviews/: README.md
.agent/rounds/: README.md
src/agent_loop_kit/: __init__.py  cli.py  engine.py  io.py  models.py  roles.py
tests/: test_io.py  test_models.py  test_roles.py
