[project]
name = "agent-loop-kit"
version = "0.1.0"
description = "OpenHands SDK 实现的 wanman 风格持续改进循环引擎"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["openhands", "sdk", "agent", "wanman", "automation"]
authors = [
    { name = "Agent Loop Kit" },
]

dependencies = [
    "openhands-sdk>=0.1.0",
    "openhands-tools>=0.1.0",
    "pydantic>=2.0",
]

[project.scripts]
agent-loop = "agent_loop_kit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop_kit"]

[tool.uv]
dev-dependencies = []
